--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </li>
       <li class="item" style="background-image: url('1.JPG');">
         <div class="content">
-            <h2 class="title"><span>N</span>itish    <span>s</span>ingh</h2>
+            <h2 class="title"><span>R</span>ani    <span>s</span>ingh</h2>
             <p class="description">
             </p>
             <!-- <button>Read More</button> -->
