--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main>
     <ul class="slider">
-      <li class="item" style="background-image: url('1.png');">
+      <li class="item" style="background-image: url('.png');">
         <!-- <div class="content">
           <h2 class="title"><span>N</span>itish    <span>s</span>ingh</h2>
           <p class="description">
@@ -17,17 +17,17 @@
           <button>Read More</button>
         </div> -->
       </li>
-      <li class="item" style="background-image: url('1.png');">
+      <li class="item" style="background-image: url('.png');">
         <div class="content">
             <h2 class="title"><span>R</span>ani    <span>G</span>upta</h2>
             <p class="description">
             </p>
             <!-- <button>Read More</button> -->
           </div></li>
-    <li class="item" style="background-image: url('2.png');"></li>
-    <li class="item" style="background-image: url('3.png');"></li>
-    <li class="item" style="background-image: url('4.png');"></li>
-    <li class="item" style="background-image: url('5.png');"></li>
+    <li class="item" style="background-image: url('.png');"></li>
+    <li class="item" style="background-image: url('.png');"></li>
+    <li class="item" style="background-image: url('.png');"></li>
+    <li class="item" style="background-image: url('.png');"></li>
 </ul>
     <nav class="nav">
       <ion-icon class="btn prev" name="arrow-back-outline"></ion-icon>
