--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </li>
       <li class="item" style="background-image: url('.png');">
         <div class="content">
-            <h2 class="title"><span>R</span>ani    <span>G</span>upta</h2>
+            <h2 class="title"><span>N</span>itish    <span>K</span>ushwaha</h2>
             <p class="description">
             </p>
             <!-- <button>Read More</button> -->
