--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
             </p>
             <!-- <button>Read More</button> -->
           </div></li>
-    <li class="item" style="background-image: url('.png');"></li>
-    <li class="item" style="background-image: url('.png');"></li>
-    <li class="item" style="background-image: url('.png');"></li>
-    <li class="item" style="background-image: url('.png');"></li>
+    <li class="item" style="background-image: url('1.png');"></li>
+    <li class="item" style="background-image: url('2.png');"></li>
+    <li class="item" style="background-image: url('3.png');"></li>
+    <li class="item" style="background-image: url('4.png');"></li>
 </ul>
     <nav class="nav">
       <ion-icon class="btn prev" name="arrow-back-outline"></ion-icon>
