--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <button>Read More</button>
         </div> -->
       </li>
-      <li class="item" style="background-image: url('.png');">
+      <li class="item" style="background-image: url('1.png');">
         <div class="content">
             <h2 class="title"><span>N</span>itish    <span>K</span>ushwaha</h2>
             <p class="description">
