--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
           <button>Read More</button>
         </div> -->
       </li>
-      <li class="item" style="background-image: url('13.png');">
+      <li class="item" style="background-image: url('13.jpg');">
         <div class="content">
             <h2 class="title"><span>N</span>itish    <span>K</span>ushwaha</h2>
             <p class="description">
             </p>
             <!-- <button>Read More</button> -->
           </div></li>
-    <li class="item" style="background-image: url('13.png');"></li>
-    <li class="item" style="background-image: url('15.png');"></li>
-    <li class="item" style="background-image: url('34.png');"></li>
-    <li class="item" style="background-image: url('54.png');"></li>
+    <li class="item" style="background-image: url('13.jpg');"></li>
+    <li class="item" style="background-image: url('15.jpg');"></li>
+    <li class="item" style="background-image: url('34.jpg');"></li>
+    <li class="item" style="background-image: url('54.jpg');"></li>
 </ul>
     <nav class="nav">
       <ion-icon class="btn prev" name="arrow-back-outline"></ion-icon>
